# django_playground

./: .gitignore  pyproject.toml
src/config/: settings.py
src/learn_orm/: apps.py  factories.py  models.py  tests.py
src/learn_orm/migrations/: 0001_initial.py
