[project]
name = "django-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django-rest-framework>=0.1.0", "django>=5.1.1"]

[tool.uv]
dev-dependencies = [
  "freezegun>=1.5.1",
  "pandas>=2.2.3",
  "pytest>=8.3.3",
  "pytest-django>=4.9.0",
  "ruff>=0.6.7",
  "djlint>=1.35.2",
  "factory-boy>=3.3.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
minversion = "6.0"
addopts = "-ra -q"
python_files = "tests.py test_*.py *_tests.py"
